--- a/src/app.scss
+++ b/src/app.scss
@@ -18,7 +18,8 @@
 @import './components/Navigation/navigation';
 @import 'components/SearchBar/search';
 @import './components/Cards/cards';
-@import './components/Container/list-container'
+@import './components/Container/list-container';
+@import './components/Cards/modal';
 
 
 
