--- a/src/components/Cards/_cards.scss
+++ b/src/components/Cards/_cards.scss
@@ -1,14 +1,42 @@
 .movie-card  {
     font-family: 'Merriweather', serif;
     background-color: rgba(0, 0, 0, 0.15);
-    border: 1px solid $primary_light;
-    // box-shadow: 0 0 10px 1px rgba(40, 24, 10, 0.848);
+    // border: 1px solid $primary_light;
+    box-shadow: 0 0 5px 1px rgba(190, 158, 116, 0.1);
     border-radius: 9px;
-    min-width: 150px;
+    min-width: 100px;
     height: auto; // 300px 
     overflow: hidden;
     // pointer-events: none;
     list-style-type: none;
+    position: relative;
+
+    &__image--container  {
+        position: relative;
+
+        &__type  {
+            position: absolute;
+            bottom: 2px;
+            left: 1px;
+            color: $white;
+            mix-blend-mode: difference;
+        }
+
+        &__like-icon  {
+            position: absolute;
+            right: 1px;
+            top: 2px;
+            border: 0;
+            background-color: transparent;
+        }
+    }
+    &__title  {
+        color: $white;
+        font-size: 0.5rem;
+        font-size: 700;
+        padding: 0.25rem;
+    }
+
 
     img {
         aspect-ratio: 2/3;
@@ -17,13 +45,6 @@
         object-fit: fill;
         box-shadow: 0px -40px 60px 0px rgba(255, 255, 255, 0.414);
 
-    }
-
-    h3  {
-        color: $white;
-        font-size: 0.6rem;
-        font-size: 700;
- 
     }
 
     &__infos  {
@@ -64,7 +85,6 @@
     height: 100%;
     width: 100%;
     background: rgba(0,0,0,0.6);
-    z-index: 100;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -72,24 +92,24 @@
 }
 
 .modal  {
-    font-family: 'Lato', sans-serif;
-    position: absolute;
-    height: fit-content;
-    width: 80%;
-    max-width: 1200px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid $primary;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: $secondary;
-    color: $white;
-    padding: 0.7rem;
-    line-height: 1.3;
-    border-radius: 6px;
+    // font-family: 'Lato', sans-serif;
+    // position: absolute;
+    // height: fit-content;
+    // width: 80%;
+    // max-width: 1200px;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+    // border: 2px solid $primary;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // flex-direction: column;
+    // background-color: $secondary;
+    // color: $white;
+    // padding: 0.7rem;
+    // line-height: 1.3;
+    // border-radius: 6px;
 
 
     &__close-icon {
@@ -180,8 +200,6 @@
     position: relative;
     border-radius: 15px;
     overflow: hidden;
-
-
     img {
         width: 100%;
     }
@@ -192,5 +210,38 @@
         padding-left: 5px;
         font-size: 0.6rem;
         color: $white;
+    }
+}
+
+.banner--card  {
+
+    &__image--container  {
+        position: relative;
+        aspect-ratio: 16/9;
+
+        &__image {
+            width: 100%;
+            display: block;
+            aspect-ratio: 16/9;
+            height: auto;
+            object-fit: cover;
+            object-position: center;
+            border-radius: 18px;
+            padding: 0.35rem;
+        }
+        &__title {
+            position: absolute;
+            font-size: 0.7rem;
+            padding: 0.3rem;
+            color: $white;
+            top: 20px;
+            left: 10px;
+            mix-blend-mode: hard-light;
+            background-color: rgba(0, 0, 0, 0.2);
+            border-radius: 12px;
+
+        }
+
+
     }
 }
