--- a/src/app.css
+++ b/src/app.css
@@ -90,8 +90,6 @@ input {
   top: 50%;
   transform: translateY(-50%);
   right: 0.5rem;
-  border: 2px solid #fb8c00;
-  border-radius: 50%;
   width: 32px;
   height: 32px;
   align-self: center;
@@ -406,14 +404,6 @@ h1 {
   flex-wrap: wrap;
   align-content: center;
 }
-.modal__genre .genre-name {
-  font-size: 0.6rem;
-  background-color: #fb8c00;
-  color: rgba(235, 230, 225, 0.944);
-  font-weight: 700;
-  padding: 0.2rem 0.6rem;
-  border-radius: 22px;
-}
 .modal__release--date {
   font-family: "Lato", sans-serif;
   font-weight: 700;
@@ -617,6 +607,7 @@ h1 {
   background-color: #0b0b0b;
   color: rgba(235, 230, 225, 0.944);
   line-height: 1.6;
+  overflow: hidden;
 }
 
 .card {
@@ -630,6 +621,9 @@ h1 {
 }
 .card__header__return-btn {
   flex: 1 1 10%;
+  border: 0;
+  background-color: transparent;
+  color: rgba(235, 230, 225, 0.944);
 }
 .card__header__search-bar {
   flex: 10 0 80%;
@@ -638,40 +632,53 @@ h1 {
 .card__header__avatar {
   flex: 1 0 10%;
 }
-.card .trailer-container {
+.card__trailer-container {
   display: grid;
   place-items: center;
   height: 40vh;
   width: 100%;
   border: 1px solid white;
 }
-.card .title {
+.card__title {
   padding: 0.25rem 0.5rem;
 }
-.card .infos {
+.card__infos {
   display: flex;
   padding: 0.25rem 0.5rem;
   -moz-column-gap: 10px;
        column-gap: 10px;
 }
-.card .type {
+.card__infos__type {
   flex: 1 1 10%;
 }
-.card .release-year {
+.card__infos__release-year {
   flex: 1 1 10%;
 }
-.card .genres {
+.card__infos__genres {
   flex: 5 1 70%;
   display: flex;
+  flex-wrap: wrap;
+  align-content: center;
 }
-.card .rating {
+.card__infos__genres .genre {
+  font-size: 0.8rem;
+  background-color: #fb8c00;
+  color: rgba(235, 230, 225, 0.944);
+  font-weight: 700;
+  padding: 0.2rem 0.6rem;
+  border-radius: 22px;
+  margin: 5px 5px;
+}
+.card__infos__rating {
   flex: 1 1 10%;
 }
-.card .synopsis {
+.card__synopsis {
+  font-family: "Merriweather", sans-serif;
+  font-size: 0.8rem;
   padding: 0.25rem 0.5rem;
-  width: 70%;
+  width: 95%;
 }
-.card .actor {
+.card__actors {
   display: flex;
   padding: 0.5rem;
 }/*# sourceMappingURL=app.css.map */
