--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,7 @@
 @import 'styles/placeholders';
 
 //---import vendors library 
+@import './../node_modules/video-react/styles/scss/video-react.scss';
 
 //---import base folder
 @import 'styles/base';
