--- a/src/components/Cards/_cards.scss
+++ b/src/components/Cards/_cards.scss
@@ -29,6 +29,21 @@
             border: 0;
             background-color: transparent;
         }
+
+        &__default--image  {
+            height: auto;
+            width: 100%;
+            aspect-ratio: 2/3;
+            display: grid;
+            place-items: center;
+        }
+
+        &__rating  {
+            position: absolute;
+            top: 2px;
+            left: 1px;
+            width: 20%;
+        }
     }
     &__title  {
         color: $white;
@@ -236,3 +251,52 @@
 
     }
 }
+
+.progress-card {
+    display: flex;
+    width: 60px;
+    padding: 10px 0;
+    background-color: black;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.progress-circle  {
+  position: relative;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background: conic-gradient(rgb(107, 11, 20) 180deg , green   rgb(31, 212, 15) 0deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &::before  {
+    content: "";
+    position: absolute;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    background-color: black;
+  }
+    
+}
+
+.progress-text  {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: black;
+    height: 22px;
+    width: 22px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.3rem;
+
+}
+
