--- a/src/components/Cards/_modal.scss
+++ b/src/components/Cards/_modal.scss
@@ -16,32 +16,26 @@
     color: $white;
     line-height: 1.6;
     overflow-y: scroll;
+    overflow-x: hidden;
 
   }
   .card {
     width : 100%;
     height :100%;
+    padding-left: 0.5rem;
 
     &__header  {
         display: flex;
-        justify-content : flex-start;
+        justify-content : space-between;
         padding : 1rem 1rem;
 
         &__return-btn  {
-            flex : 1 1 10%;
             border: 0;
             background-color: transparent;
             color: $white;
         }
 
-        &__search-bar  {
-            flex : 10 0 80%;
-            padding-left : 2vw
-        }
 
-        &__avatar  {
-            flex : 1 0 10%;
-        }
     }
 
     &__trailer-container {
