--- a/src/components/Cards/_cards.scss
+++ b/src/components/Cards/_cards.scss
@@ -14,7 +14,7 @@
     &__header  {
         display: flex;
         justify-content: space-between;
-        background-color: $secondary_dark;
+        background-color: transparent;
         height: 30px;
 
         &__like-icon {
@@ -237,7 +237,7 @@
 .progress-card {
     display: flex;
     padding: 5px 7px;
-    background-color: black;
+    background-color: transparent;
     align-items: center;
     justify-content: center;
 
