--- a/src/components/Cards/_modal.scss
+++ b/src/components/Cards/_modal.scss
@@ -43,7 +43,6 @@
         place-items : center;
         height : 40vh;
         width : 100%;
-        border : 1px solid white;
     }
     &__title  {
 
@@ -71,7 +70,7 @@
             font-size: 0.7rem;
         }
         &__genres  {
-            flex: 5 1 60%;
+            flex: 5 1 65%;
             display : flex;
             flex-wrap: wrap;
             align-content: center;
@@ -87,27 +86,86 @@
             }
         }
         &__rating  {
-            flex: 1 1 20%;
+            flex: 1 1 25%;
             display: flex;
             align-items: baseline;
             font-size: 0.8rem;
 
         }
     }
+
     &__synopsis  {
-        font-family: 'Merriweather', sans-serif;
         font-size: 0.8rem;
         padding: 0.5rem 0.75rem ;
         width: 95%;
+        
+        span  {
+            display: inline;
+            font-style: italic;
+            font-size: 0.6rem;
+            padding: 0 0.2rem;
+            cursor: pointer;
+
+            span  {
+                text-decoration: underline;
+            }
+        }
+    }
+    &__synopsis--container  {
+        display: inline-block;
+        font-family: 'Lato', sans-serif;
         color: rgb(192, 187, 183);
         text-align: justify;
-
+        overflow: hidden;
     }
-    &__actors  {
+    &__casting {
         display: flex;
-        padding: 0.5rem
+        flex-direction: column;
+        padding: 0.5rem;
+        margin-bottom: 20px;
+
+        .directors  {
+            font-size: 0.8rem;
+            color: $white;
+            .director  {
+                padding: 0 0.2rem;
+            }
+        }
+        .actors  {
+            font-size: 0.8rem;
+            color: $white;
+            .actor  {
+                padding: 0 0.2rem;
+            }
+        }
+    }
+    &__similar--content  {
+
+       .similar-content__wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        overflow-x: scroll;
+        justify-content: space-evenly;
+        gap: 0.25rem;
+        padding: 0 0.25rem;
+        padding-bottom: 20px;
+
+        img {
+            aspect-ratio: 2/3;
+            width: 90px;
+            object-fit: contain;
+        }
+       }
+    }
+    &__call-to-action  {
+        width: 30%;
+        min-width: 150px;
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
     }
   }
+
 
   .essai  {
     background-color: white;
