--- a/src/app.css
+++ b/src/app.css
@@ -1614,7 +1614,7 @@ h1 {
 .card {
   width: 100%;
   height: 100%;
-  padding-left: 0.5rem;
+  padding: 0 0.5rem;
 }
 .card__header {
   display: flex;
@@ -1629,8 +1629,18 @@ h1 {
 .card__trailer-container {
   display: grid;
   place-items: center;
-  height: 40vh;
   width: 100%;
+  margin-bottom: 20px;
+}
+.card__trailer-container .player {
+  aspect-ratio: 16/9;
+  max-width: 1600px;
+}
+.card__trailer-container img {
+  aspect-ratio: 16/9;
+  max-width: 1600px;
+  width: 100%;
+  height: auto;
 }
 .card__title {
   padding: 0.5rem 0.75rem;
@@ -1720,6 +1730,7 @@ h1 {
 .card__similar--content .similar-content__wrapper {
   display: flex;
   flex-wrap: wrap;
+  align-content: center;
   overflow-x: scroll;
   justify-content: space-evenly;
   gap: 0.25rem;
