--- a/src/components/SearchBar/_search.scss
+++ b/src/components/SearchBar/_search.scss
@@ -112,6 +112,7 @@
     width: 100%;
     overflow-y: scroll;
     padding-bottom: 50px;
+    font-family: 'Lato', serif;
     
 }
 .search--result__wrapper {
@@ -119,13 +120,18 @@
     height: 90vh;
     width: 90%;
     display: grid;
-    // grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     color: white;
-    display: flex;
-    flex-direction: column;
-    row-gap: 70px;
-  
 
+    a  {
+        color: $white;
+        text-decoration: none;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+
+    }
 
     h1 {
         text-align: center;
