--- a/src/components/Container/_list-container.scss
+++ b/src/components/Container/_list-container.scss
@@ -131,3 +131,30 @@
         align-items: center;
       }
 }
+
+.home-image  {
+  height: 50vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  margin-bottom: 350px;
+
+  // -webkit-mask-image: linear-gradient(to bottom,black 10%,transparent 80%);
+
+  img  {
+    width: 100%;
+    aspect-ratio: 2/3;
+    height: auto;
+    mask-image: linear-gradient(to bottom,black 0%,transparent 90%);
+  }
+}
+
+.promoted  {
+  margin: 0 auto;
+  height: 30vh;
+  width: 95%;
+
+  font-family: 'Lato', serif;
+  background-color: $secondary;
+  color: $white;
+}
