--- a/src/components/Navigation/_navigation.scss
+++ b/src/components/Navigation/_navigation.scss
@@ -1,10 +1,10 @@
 
 .nav__links  {
     position: fixed;
-    background-color: $secondary;
-    top: 35px;
+    background-color: #0b0b0bec;
+    top: 70px;
     left: -15vw;
-    height: calc(100vh - 50px) ;
+    height: 50vh;
     width: 17.5vw;
     display: flex;
     flex-direction: column;
@@ -12,6 +12,8 @@
     row-gap: 40px;
     padding-top: 25px;
     transition: left 0.25s ease-in;
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 48px;
 
     &.is-active  {
         left: -0.5rem;
