--- a/src/components/SearchBar/_search.scss
+++ b/src/components/SearchBar/_search.scss
@@ -25,7 +25,7 @@
             outline: none;
             width: 2rem;
             height: 2rem;
-            background-color: rgba(46, 35, 8, 0.656);
+            background-color: transparent;
             transition: border-radius 0.3s ease-in-out,
                         width 0.5s ease-in-out;
                         
@@ -43,6 +43,7 @@
                 max-width: 65vw;
                 width: 600px;
                 padding-left: 35px;
+                background-color: rgba(46, 35, 8, 0.656);
             }
 
         }
@@ -121,7 +122,9 @@
     width: 90%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    grid-template-rows: repeat(auto-fit);
     color: white;
+    align-content: start;
 
     a  {
         color: $white;
