--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $primary : #fb8c00;
 $primary_light : #ffbd45;
 $primary_dark : #c25e00;
 $secondary : #0b0b0b;
+$secondary-transparent : linear-gradient(180deg, #0b0b0b 0%,  #0b0b0b60 30% #0b0b0b26  100%);
 $secondary_light : #484848;
 $secondary_dark : #000000;
 
