--- a/src/components/Cards/_cards.scss
+++ b/src/components/Cards/_cards.scss
@@ -1,13 +1,11 @@
 .movie-card  {
     font-family: 'Merriweather', serif;
     background-color: rgba(0, 0, 0, 0.15);
-    // border: 1px solid $primary_light;
     // box-shadow: 0 0 5px 1px rgba(190, 158, 116, 0.1);
     border-radius: 9px;
     min-width: 100px;
-    height: auto; // 300px 
+    height: auto; 
     overflow: hidden;
-    // pointer-events: none;
     list-style-type: none;
     position: relative;
 
@@ -15,12 +13,19 @@
         display: flex;
         justify-content: space-between;
         background-color: transparent;
-        height: 30px;
+        height: 0px;
 
         &__like-icon {
             border: 0;
             background-color: transparent;
+            position: absolute;
 
+        }
+        &__rating  {
+            position: absolute;
+            z-index: 2;
+            top: -4px;
+            left: -4px;
         }
 
     }
@@ -75,39 +80,7 @@
 }
 
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: rgba(0,0,0,0.6);
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    overflow-y: scroll;
-}
-
 .modal  {
-    // font-family: 'Lato', sans-serif;
-    // position: absolute;
-    // height: fit-content;
-    // width: 80%;
-    // max-width: 1200px;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-    // border: 2px solid $primary;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // flex-direction: column;
-    // background-color: $secondary;
-    // color: $white;
-    // padding: 0.7rem;
-    // line-height: 1.3;
-    // border-radius: 6px;
-
 
     &__close-icon {
         position: absolute;
@@ -246,8 +219,8 @@
 
 .progress-circle  {
     position: relative;
-    height: 22px;
-    width: 22px;
+    height: 26px;
+    width: 26px;
     border-radius: 50%;
     // background: conic-gradient(rgba(255,255,255,1) 0deg , rgba(98,245,12,1) 0deg, rgb(255 242 10) 90deg, rgb(215 106 26) 181deg,rgb(251 10 10) 270deg );
     
@@ -265,13 +238,13 @@
     color: $white;
     background-color: rgb(0, 0, 0);
     // background-color: rgba(91, 86, 86, 0.435);
-    height: 18px;
-    width: 18px;
+    height: 22px;
+    width: 22px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 0.35rem;
+    font-size: 0.5rem;
 
 }
 
