--- a/src/app.scss
+++ b/src/app.scss
@@ -13,6 +13,7 @@
 @import 'styles/typography';
 
 //---import layout folder
+@import './pages/Login/login';
 @import './pages/Home/home';
 @import './pages/Likes/likes';
 @import './components/Logo/logo';
