--- a/src/components/Cards/_modal.scss
+++ b/src/components/Cards/_modal.scss
@@ -176,7 +176,9 @@
         min-width: 150px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         margin: 0 auto;
+
     }
   }
 
