--- a/src/components/SearchBar/_search.scss
+++ b/src/components/SearchBar/_search.scss
@@ -109,11 +109,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     overflow-y: scroll;
     padding-bottom: 50px;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     
 }
 .search--result__wrapper {
@@ -121,10 +121,11 @@
     height: 90vh;
     width: 90%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-    grid-template-rows: repeat(auto-fit);
+    grid-template-columns: repeat(auto-fit, minmax(113px, 1fr));
     color: white;
-    align-content: start;
+    align-content: start; 
+    justify-items: center;
+    gap: 5px;
 
     a  {
         color: $white;
@@ -133,6 +134,39 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
+        aspect-ratio: 2/3;
+        // height: fit-content;
+        // width: fit-content;
+        
+        .no-img  {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 6px;
+            overflow: hidden;
+            aspect-ratio: 2/3;
+            background-color: $secondary-dark;
+            border: 1px solid rgba(255, 255, 255, 0.186);
+            padding: 10px;
+            width: 100%;
+            height: 100%;
+
+            p  {
+                text-align: center;
+                font-size: 0.8rem;
+            }
+    
+        }
+        
+        img {
+            border-radius: 6px;
+            overflow: hidden;
+            aspect-ratio: 2/3;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+           
+        }
 
     }
 
