--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -25,3 +25,14 @@
     font-size: 0.8rem;
     font-weight: 700;
 }
+
+@mixin logBtn  {
+    height: 25px;
+    width: 50px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 0.7rem;
+    border-radius: 6px;
+    background-color: $primary;
+    border: none;
+}
