start register form

--- a/src/app.scss
+++ b/src/app.scss
@@ -22,7 +22,7 @@
 @import './components/Cards/cards';
 @import './components/Container/list-container';
 @import './components/Cards/modal';
-
+@import './components//Authentification/authentifacation'
 
 
 //----import components folder
